@@ -1,3 +1,12 @@
+2001-10-25 Daniel Horn <hellcatv@hotmail.com>
+	* fixed GFXPickLights () to actually work! (now lights are picked out of a 3d hash table)
+	* added the option to put star system lights into the 3d hash table light="0 1l"  means 0 is on globally and 1 is on for starships "near enough" Now we only have 1 global light and 1 attenuated light for starships "close enough" Framerates should skyrocket for GeForce cards
+	* learned not to debug with fastmath on
+	* added default states for cockpits
+	* added default space background color if backgrounds should be off
+	* modified test.xml to make planets farther apart
+	* modified config_xml.cpp to print out the missing var's default val
+	
 2001-10-25 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* implemented orders in mission file (preliminary)
